@@ -104,6 +104,7 @@ This is a ***backwards-incompatible*** release.
  * [Install-IisVirtualDirectory](https://get-carbon.org/help/Install-IisVirtualDirectory.html) now modifies existing virtual directories in place, instead of deleting and re-creating.
  * [Invoke-AppCmd](https://get-carbon.org/help/Invoke-AppCmd.html) is now obsolete and will be removed from a future version of Carbon. Switch to Carbon's IIS functions, or use [Get-IisConfigurationSection](https://get-carbon.org/help/Get-IisConfigurationSection.html) to get `ConfigurationElement` objects from the `Microsoft.Web.Administration` API that you can modify.
  * Added `Description` parameter to [Install-Service](https://get-carbon.org/help/Install-Service.html) for setting a service's description.
+ * Added `DisplayName` parameter to [Install-Service](https://get-carbon.org/help/Install-Service.html) for setting a service's display name.
  
 ## Enhancements
 
@@ -223,6 +224,7 @@ This is a ***backwards-incompatible*** release.
  * Improved [Install-Service](https://get-carbon.org/help/Install-Service.ps1) error handling. It now uses `net helpmsg` to get helpful error messages based on sc.exe exit codes.
  * Added `Credential` parameter to [Install-Service](https://get-carbon.org/help/Install-Service.ps1) for increased security and to follow PowerShell guidelines.
  * Added `Description` parameter to [Install-Service](https://get-carbon.org/help/Install-Service.html) for setting a service's description.
+ * Added `DisplayName` parameter to [Install-Service](https://get-carbon.org/help/Install-Service.html) for setting a service's display name.
 
 ### Shares
 
